create geolocation recognition

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>video audio</title>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJQwvprQazed7EcOI8TlV3eFnLexcXv14&sensor=true"></script>
 <script type="text/javascript" src="assets/js/controls.js"></script>
+<link rel="stylesheet" href="assets/css/mysite.css" type="text/css">
 </head>
 <body>
-<video src="assets/video/mud_ride.mp4"   id="myVideo"></video>
-<audio src="assets/audio/Balkan Beatbox - Hermetico.mp3" id="myAudio"></audio>
-<input type="button" value="play" id="playPause">
+<section>
+<div id="myMap"></div>
+</section>
 </body>
 </html>
